Resolves #5 - reusing FlossWare jCore logging functionality and also added additional logging.

--- a/src/test/resources/logging.properties
+++ b/src/test/resources/logging.properties
@@ -2,8 +2,9 @@ handlers=java.util.logging.ConsoleHandler
 
 .level=ALL
 
+org.flossware.jcore.level=ALL
 org.solenopsis.keraiai.level=ALL
-com.level=INFO
+com.level=SEVERE
 
 # Handlers
 # -----------------------------------------
@@ -12,3 +13,4 @@ com.level=INFO
 # Override of global logging level
 java.util.logging.ConsoleHandler.level=FINEST
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
+java.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tk:%1$tM:%1$tS %3$s %4$s %5$s %n
