NA - ignoring FlossWare code in the corbetura report

--- a/pom.xml
+++ b/pom.xml
@@ -256,6 +256,7 @@
                 <configuration>
                     <instrumentation>
                         <ignores>
+                            <ignore>org.flossware.*</ignore>
                             <ignore>org.solenopsis.keraiai.wsdl.*</ignore>
                         </ignores>
 
