NA - this should now finally fix the corbetura report to exclude FlossWare jCore

--- a/pom.xml
+++ b/pom.xml
@@ -256,11 +256,12 @@
                 <configuration>
                     <instrumentation>
                         <ignores>
-                            <ignore>org.flossware.*</ignore>
+                            <ignore>org.flossware.jcore.*</ignore>
                             <ignore>org.solenopsis.keraiai.wsdl.*</ignore>
                         </ignores>
 
                         <excludes>
+                            <exclude>org/flossware/jcore/**/*.class</exclude>
                             <exclude>org/solenopsis/keraiai/wsdl/**/*.class</exclude>
                             <exclude>org/solenopsis/keraiai/**/*Test.class</exclude>
                         </excludes>
