--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <org.apache.maven.plugins_maven-surefire-report-plugin_version>2.19.1</org.apache.maven.plugins_maven-surefire-report-plugin_version>
         <org.codehaus.mojo_cobertura-maven-plugin_version>2.7</org.codehaus.mojo_cobertura-maven-plugin_version>
         <org.apache.maven.plugins_maven-pmd-plugin_version>3.6</org.apache.maven.plugins_maven-pmd-plugin_version>
+        <org.apache.maven.plugins_maven-jxr-plugin_version>2.5</org.apache.maven.plugins_maven-jxr-plugin_version>
         <org.codehaus.mojo_findbugs-maven-plugin_version>3.0.3</org.codehaus.mojo_findbugs-maven-plugin_version>
         <org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>2.3</org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>
 
@@ -354,6 +355,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>${org.apache.maven.plugins_maven-pmd-plugin_version}</version>
+
+                <configuration>
+                    <excludes>
+                        <exclude>org/solenopsis/keraiai/wsdl/**/*.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>${org.apache.maven.plugins_maven-jxr-plugin_version}</version>
             </plugin>
 
             <plugin>
