NA - excluding code coverage for WSDLs as well as FlossWare packages

--- a/pom.xml
+++ b/pom.xml
@@ -348,6 +348,14 @@
                         <format>html</format>
                         <format>xml</format>
                     </formats>
+
+                    <instrumentation>
+                        <excludes>
+                            <exclude>org/flossware/jcore/**/*</exclude>
+                            <exclude>org/solenopsis/keraiai/wsdl/**/*</exclude>
+                            <exclude>org/solenopsis/keraiai/**/*Test.class</exclude>
+                        </excludes>
+                    </instrumentation>
                 </configuration>
             </plugin>
 
