NA - set findbugs to check with more scrutiny

--- a/pom.xml
+++ b/pom.xml
@@ -390,6 +390,9 @@
 
                 <configuration>
                     <onlyAnalyze>org.solenopsis.keraiai.*</onlyAnalyze>
+
+                    <effort>Max</effort>
+                    <threshold>Low</threshold>
                 </configuration>
             </plugin>
         </plugins>
