NA - trying to fix the one lone issue with code coverage

--- a/pom.xml
+++ b/pom.xml
@@ -353,7 +353,9 @@
 
                     <instrumentation>
                         <excludes>
+                            <exclude>org/flossware/jcore</exclude>
                             <exclude>org/flossware/jcore/**/*</exclude>
+                            <exclude>org.flossware.jcore</exclude>
                             <exclude>org/solenopsis/keraiai/wsdl/**/*</exclude>
                             <exclude>org/solenopsis/keraiai/**/*Test.class</exclude>
                         </excludes>
