--- a/pom.xml
+++ b/pom.xml
@@ -29,15 +29,15 @@
         <org.apache.maven.plugins_maven-compiler-plugin_version>3.5.1</org.apache.maven.plugins_maven-compiler-plugin_version>
         <org.apache.maven.plugins_maven-surefire-plugin_version>2.19.1</org.apache.maven.plugins_maven-surefire-plugin_version>
         <org.apache.maven.plugins_maven-project-info-reports-plugin_version>2.9</org.apache.maven.plugins_maven-project-info-reports-plugin_version>
-        <org.apache.maven.plugins_maven-javadoc-plugin_version>2.10.3</org.apache.maven.plugins_maven-javadoc-plugin_version>
+        <org.apache.maven.plugins_maven-javadoc-plugin_version>2.10.4</org.apache.maven.plugins_maven-javadoc-plugin_version>
         <org.apache.maven.plugins_maven-surefire-report-plugin_version>2.19.1</org.apache.maven.plugins_maven-surefire-report-plugin_version>
         <org.codehaus.mojo_cobertura-maven-plugin_version>2.7</org.codehaus.mojo_cobertura-maven-plugin_version>
-        <org.apache.maven.plugins_maven-pmd-plugin_version>3.6</org.apache.maven.plugins_maven-pmd-plugin_version>
+        <org.apache.maven.plugins_maven-pmd-plugin_version>3.7</org.apache.maven.plugins_maven-pmd-plugin_version>
         <org.apache.maven.plugins_maven-jxr-plugin_version>2.5</org.apache.maven.plugins_maven-jxr-plugin_version>
-        <org.codehaus.mojo_findbugs-maven-plugin_version>3.0.3</org.codehaus.mojo_findbugs-maven-plugin_version>
-        <org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>2.3</org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>
+        <org.codehaus.mojo_findbugs-maven-plugin_version>3.0.4</org.codehaus.mojo_findbugs-maven-plugin_version>
+        <org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>2.3.1-b20150201.1248</org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>
 
-        <org.flossware_jCore_version>1.0.28</org.flossware_jCore_version>
+        <org.flossware_jCore_version>1.0.31</org.flossware_jCore_version>
 
         <junit_junit_version>4.12</junit_junit_version>
 
@@ -347,15 +347,6 @@
                         <format>html</format>
                         <format>xml</format>
                     </formats>
-
-                    <instrumentation>
-                        <excludes>
-                            <exclude>org/flossware/jcore/**/*</exclude>
-                            <exclude>org/flossware/jcore/**/*.class</exclude>
-                            <exclude>org/solenopsis/keraiai/wsdl/**/*</exclude>
-                            <exclude>org/solenopsis/keraiai/**/*Test.class</exclude>
-                        </excludes>
-                    </instrumentation>
                 </configuration>
             </plugin>
 
