--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <org.apache.maven.plugins_maven-pmd-plugin_version>3.7</org.apache.maven.plugins_maven-pmd-plugin_version>
         <org.apache.maven.plugins_maven-jxr-plugin_version>2.5</org.apache.maven.plugins_maven-jxr-plugin_version>
         <org.codehaus.mojo_findbugs-maven-plugin_version>3.0.4</org.codehaus.mojo_findbugs-maven-plugin_version>
-        <org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>2.3.1-b20150201.1248</org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>
+        <org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>2.3</org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>
 
         <org.flossware_jCore_version>1.0.31</org.flossware_jCore_version>
 
