--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <org.apache.maven.plugins_maven-pmd-plugin_version>3.7</org.apache.maven.plugins_maven-pmd-plugin_version>
         <org.apache.maven.plugins_maven-jxr-plugin_version>2.5</org.apache.maven.plugins_maven-jxr-plugin_version>
         <org.codehaus.mojo_findbugs-maven-plugin_version>3.0.4</org.codehaus.mojo_findbugs-maven-plugin_version>
-        <org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>2.3.1-b20150201.1248</org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>
+        <org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>2.3</org.jvnet.jax-ws-commons_jaxws-maven-plugin_version>
         <net.sourceforge.cobertura_cobertura_version>2.1.1</net.sourceforge.cobertura_cobertura_version>
         <org.flossware_jCore_version>1.0.41</org.flossware_jCore_version>
 
@@ -140,6 +140,7 @@
                             <!-- Without this, multiple WSDLs won't be processed :( -->
                             <staleFile>${project.build.directory}/jaxws/stale/wsdl.apex.done</staleFile>
                             <vmArgs>
+                                <vmArg>-Djavax.xml.accessExternalDTD=all</vmArg>
                                 <vmArg>-Djavax.xml.accessExternalSchema=all</vmArg>
                             </vmArgs>
                         </configuration>
@@ -167,6 +168,7 @@
                             <!-- Without this, multiple WSDLs won't be processed :( -->
                             <staleFile>${project.build.directory}/jaxws/stale/wsdl.enterprise.done</staleFile>
                             <vmArgs>
+                                <vmArg>-Djavax.xml.accessExternalDTD=all</vmArg>
                                 <vmArg>-Djavax.xml.accessExternalSchema=all</vmArg>
                             </vmArgs>
                         </configuration>
@@ -194,6 +196,7 @@
                             <!-- Without this, multiple WSDLs won't be processed :( -->
                             <staleFile>${project.build.directory}/jaxws/stale/wsdl.metadata.done</staleFile>
                             <vmArgs>
+                                <vmArg>-Djavax.xml.accessExternalDTD=all</vmArg>
                                 <vmArg>-Djavax.xml.accessExternalSchema=all</vmArg>
                             </vmArgs>
                         </configuration>
@@ -221,6 +224,7 @@
                             <!-- Without this, multiple WSDLs won't be processed :( -->
                             <staleFile>${project.build.directory}/jaxws/stale/wsdl.partner.done</staleFile>
                             <vmArgs>
+                                <vmArg>-Djavax.xml.accessExternalDTD=all</vmArg>
                                 <vmArg>-Djavax.xml.accessExternalSchema=all</vmArg>
                             </vmArgs>
                         </configuration>
@@ -248,6 +252,7 @@
                             <!-- Without this, multiple WSDLs won't be processed :( -->
                             <staleFile>${project.build.directory}/jaxws/stale/wsdl.tooling.done</staleFile>
                             <vmArgs>
+                                <vmArg>-Djavax.xml.accessExternalDTD=all</vmArg>
                                 <vmArg>-Djavax.xml.accessExternalSchema=all</vmArg>
                             </vmArgs>
                         </configuration>
@@ -265,7 +270,6 @@
                 </configuration>
             </plugin>
 
-            <!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
@@ -319,7 +323,6 @@
                     </execution>
                 </executions>
             </plugin>
-            -->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -354,7 +357,6 @@
                 <version>${org.apache.maven.plugins_maven-surefire-report-plugin_version}</version>
             </plugin>
 
-            <!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
@@ -367,7 +369,6 @@
                     </formats>
                 </configuration>
             </plugin>
-            -->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
